spacing fix

--- a/style.css
+++ b/style.css
@@ -36,12 +36,17 @@ a {
 
 i {
     font-size: 50px;
-    margin-right: 15px;
-    margin-top: 10px;
 }
 
 a i {
     color: rgba(255, 255, 255, 0.9);
+}
+
+a {
+    margin-right: 8px;
+    margin-left: 8px;
+    margin-top: 12px;
+    display: inline-block;
 }
 
 main {
